       A crash log file is named like CrashRpt-Log-<date>-<time>-{<crashguid>}.txt.
       Recent log files are stored even if corresponding crash reports were delivered
       (to give user an ability to review recent crash information). When more than 10 logs
       are accumulated, the oldest ones are removed.
       

- New: added Slovak language file (contributed by Zoltan Tirinda)
- New: added Japaneze language file (contributed by devil.tamachan)

- Fixed: Crashsender SMTP sendMsg - Errorhandling (issue 200)
- Fixed: pfnCrashCallback2 is missing in tagCR_INSTALL_INFOW (issue 211)
- Fixed: Version 1402 does not include files attached with "crAddFile2" in case of 
       a long path name (issue 209)
- Fixed: Few issues with static code analysis (issue 220)
- Fixed: Wrong screen video capture video with multi screen (issue 215)
- Fixed: crAddScreenshot2() nJpegQuality is only used for the first error report 
       then it is always set to 0 (issue 217)
- Fixed: Added file changes (renamed, moved, removed, etc.) within a 
       client program's running session (issue 219)
- Fixed: Adding custom properties with same name results in CrashSender.exe assertion 
       failure (issue 216).
- Fixed: 'Attach More Files' : Adding large amount of files (over >= 10) 
       unsuccessfully (issue 218:)

--- Ver. 1.4.2 ---

- New: Added an ability to add multiple files to crash reports with crAddFile2() 
       using file search pattern (e.g. "*.log"). This implements feature request
       described in issue 190.

- New: Added new flag CR_INST_AUTO_THREAD_HANDLERS allowing to 
       install/uninstall exception handlers automatically in DllMain() 
       on DLL_THREAD_ATTACH/DETACH (issue 185).

- New: adjusting dump privileges to avoid error 'Only part of a ReadProcessMemory
       or WriteProcessMemory request was completed.'

- Fixed: Screenshot file still sent even if deleted (issue 186).
- Fixed: Video division by zero (issue 189)