@@ -97,7 +97,8 @@ int CCrashHandler::Init(
         LPCTSTR lpcszSmtpProxy,
         LPCTSTR lpcszCustomSenderIcon,
 		LPCTSTR lpcszSmtpLogin,
-		LPCTSTR lpcszSmtpPassword)
+		LPCTSTR lpcszSmtpPassword,
+		int nRestartTimeout)
 { 
 	// This method initializes configuration parameters, 
 	// creates shared memory buffer and saves the configuration parameters there,
@@ -194,6 +195,9 @@ int CCrashHandler::Init(
 
     // Save restart command line
     m_sRestartCmdLine = lpcszRestartCmdLine;
+	m_nRestartTimeout = nRestartTimeout;
+	if(m_nRestartTimeout<=0)
+		m_nRestartTimeout = 60; // use default 60 sec timeout
 
     // Save E-mail recipient(s) address
     m_sEmailTo = lpcszTo;
@@ -552,6 +556,7 @@ CRASH_DESCRIPTION* CCrashHandler::PackCrashInfoIntoSharedMem(CSharedMem* pShared
 	m_pTmpCrashDesc->m_hWndVideoParent = m_hWndVideoParent;
 	m_pTmpCrashDesc->m_dwProcessId = GetCurrentProcessId();
 	m_pTmpCrashDesc->m_bClientAppCrashed = FALSE;
+	m_pTmpCrashDesc->m_nRestartTimeout = m_nRestartTimeout;
 
     m_pTmpCrashDesc->m_dwAppNameOffs = PackString(m_sAppName);
     m_pTmpCrashDesc->m_dwAppVersionOffs = PackString(m_sAppVersion);
