@@ -107,7 +107,8 @@ public:
         __in_opt LPCTSTR lpcszSmtpProxy = NULL,
         __in_opt LPCTSTR lpcszCustomSenderIcon = NULL,
 		__in_opt LPCTSTR lpcszSmtpLogin = NULL,
-		__in_opt LPCTSTR lpcszSmtpPassword = NULL);
+		__in_opt LPCTSTR lpcszSmtpPassword = NULL,
+		__in_opt int nRestartTimeout = 0);
 
 	// Returns TRUE if object was initialized.
     BOOL IsInitialized();
@@ -273,6 +274,7 @@ public:
     DWORD m_dwFlags;               // Flags.
     MINIDUMP_TYPE m_MinidumpType;  // Minidump type.
     CString m_sRestartCmdLine;     // App restart command line.
+	int m_nRestartTimeout;         // Restart timeout.
     CString m_sUrl;                // Url to use when sending error report over HTTP.  
     CString m_sEmailTo;            // E-mail recipient.
     int m_nSmtpPort;               // SMTP port.
