@@ -7,8 +7,10 @@
        Recent log files are stored even if corresponding crash reports were delivered
        (to give user an ability to review recent crash information). When more than 10 logs
        are accumulated, the oldest ones are removed.
-       
 
+- New: Added CR_INSTALL_INFO::nRestartTimeout structure field. Using this parameter,
+       you can override the default app restart timeout (60 seconds).
+	   
 - New: added Slovak language file (contributed by Zoltan Tirinda)
 - New: added Japaneze language file (contributed by devil.tamachan)
 
